--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,54 +1,41 @@
-.header {
-    display: flex;
-    flex-direction: row;
-    /* justify-content: space-around; */
-
-
-}
-
-
 .logo {
-    width: 130px;
+    width: 50px;
     display: flex;
 
 }
-
-.navbar {
-    display: flex;
-    align-self: center;
-    justify-content: center;
-}
-
-
 .cart {
     display: flex;
     flex-direction: row;
+    width: 44px;
+    justify-content: center;
+    flex-grow: 1;
+    margin-right: 0.5rem;
+}
+
+.active{
+    text-decoration: underline;
+    text-decoration-color: #F9A826;
+    text-decoration-thickness:3px ;
 }
 
 .right-header {
     display: flex;
     flex-direction: row;
     align-self: center;
-    justify-content: end;
-}
-
-.ri-shopping-cart-line {
-    font-size: 23px;
-}
-
-.signup {
-    text-decoration: none;
-    background: white;
+    justify-content: flex-end;
 }
 
 .count-cart{
-   display: flex;
-    width: 20px;
-    height: 20px;
-    background: #F9A826;
-    border-radius: 50%;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-}
+    display: flex;
 
+     width: 20px;
+     height: 20px;
+     background: #F9A826;
+     border-radius: 50%;
+     text-align: center;
+     justify-content: center;
+     align-items: center;
+ }
+ .ri-shopping-cart-line, .ri-menu-line {
+    font-size: 23px;
+}
