--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -31,20 +31,32 @@ form .forget-password{
 }
 .custome-btn
 {
-    background-color: #F9A826 !important;
-    color: white !important;
-    border: none !important;
-    display: flex !important;
-    justify-content: center !important;
-    width: 350px !important;
-    margin-top: 20px !important;
-    font-weight: 500 !important;
+    background-color: #F9A826 ;
+    color: white ;
+    border: none ;
+    display: flex ;
+    justify-content: center ;
+    width: 350px ;
+    height: 2.5rem;
+    margin-top: 20px ;
+    font-weight: 500 ;
+    border-radius:  0.375rem;
+    align-items: center;
 }
 
 .signUp{
     color:rgb(100, 95, 95);
 }
-.signUp span{
-    color: #F9A826;
-    font-weight: 500
+
+
+.ErrorMessage{
+    border-left: 4.5px solid #ff2111;
+    background-color: #f18c885c;
+    border-radius: 0.375rem;
+    width: 21.5rem;
+    height: 2.4rem;
+    display: flex;
+    margin-bottom: 1.5rem;
+    align-items: center;
+
 }
