--- a/src/components/Signup/signup.css
+++ b/src/components/Signup/signup.css
@@ -3,13 +3,13 @@
     height: 150px;
     margin-bottom: 30px;
 }
-form{
+/* form{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
-}
+} */
 input{
   
     width: 350px;
