--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -29,7 +29,7 @@ form .forget-password{
     margin-left: 224px;
     color:rgb(100, 95, 95);
 }
-.custome-btn
+/* .custome-btn
 {
     background-color: #F9A826 ;
     color: white ;
@@ -46,7 +46,7 @@ form .forget-password{
 
 .signUp{
     color:rgb(100, 95, 95);
-}
+} */
 
 
 .ErrorMessage{
