--- a/src/components/Signup/signup.css
+++ b/src/components/Signup/signup.css
@@ -29,7 +29,7 @@ form .forget-password{
     margin-left: 224px;
     color:rgb(100, 95, 95);
 }
-.custome-btn
+/* .custome-btn
 {
     background-color: #F9A826 !important;
     color: white !important;
@@ -43,7 +43,7 @@ form .forget-password{
 
 .signUp{
     color:rgb(100, 95, 95);
-}
+} */
 .signUp span{
     color: #F9A826;
     font-weight: 500
