--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -27,7 +27,11 @@
 
 
 .pizza-img{
-    height: 400px;
+    height: 299px;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    box-shadow: 0px 0px 1px 14px #3e424ab8;
+    margin-top: 2rem;
 }
 .left-side{
     align-self: center;
