--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -3,57 +3,19 @@
     height: 150px;
     margin-bottom: 30px;
 }
-/* form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-} */
-input{
-  
-    width: 350px;
-    height:40px;
-    border: 0.8px rgb(204, 201, 201) solid;
-    border-radius: 5px;
-    background-color: white;
-    padding: 8px;
-}
 
-input:focus {
-    border: 0.8px #F9A826 solid;
-    outline:none;
-}
 
-form .forget-password{
-    margin-left: 224px;
+
+.form .forget-password{
+    margin-left: 195px;
     color:rgb(100, 95, 95);
 }
-/* .custome-btn
-{
-    background-color: #F9A826 ;
-    color: white ;
-    border: none ;
-    display: flex ;
-    justify-content: center ;
-    width: 350px ;
-    height: 2.5rem;
-    margin-top: 20px ;
-    font-weight: 500 ;
-    border-radius:  0.375rem;
-    align-items: center;
-}
-
-.signUp{
-    color:rgb(100, 95, 95);
-} */
 
 
 .ErrorMessage{
     border-left: 4.5px solid #ff2111;
     background-color: #f18c885c;
-    border-radius: 0.375rem;
-    width: 21.5rem;
+   
     height: 2.4rem;
     display: flex;
     margin-bottom: 1.5rem;
