--- a/src/components/Signup/signup.css
+++ b/src/components/Signup/signup.css
@@ -12,18 +12,18 @@
 } */
 input{
   
-    width: 350px;
+    /* width: 350px;
     height:40px;
     border: 0.8px rgb(204, 201, 201) solid;
     border-radius: 5px;
     background-color: white;
-    padding: 8px;
+    padding: 8px; */
 }
-
+/* 
 input:focus {
     border: 0.8px #F9A826 solid;
     outline:none;
-}
+} */
 
 form .forget-password{
     margin-left: 224px;
